src/stylesheets/header-footer.css
.menu-icon {
  color: aqua;
  font-size: 70px;
  margin: 20px;
  z-index: 2;
  cursor: pointer;
}

.hide-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  position: fixed;
  color: white;
  text-decoration: none;
  top: 0;
  right: 0;
  height: 0;
  width: 0;
  transition: all 0.5s;
}
body,html{
    overflow-x: hidden;
}
.show-header {
  color: white;
  text-decoration: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: fixed;
  top: 0;
  right: 0;
  background-color: rgb(55, 4, 55);
  opacity: 0.95;
  height: 65vh;
  width: 50%;
  overflow: hidden;
  border-bottom-left-radius: 50%;
  transition: all 0.5s;
}
ul li {
  color: white;
  list-style: none;
  margin-top: 25px;
}
ul a {
  color: white;
  text-decoration: none;
}

.active{
    border: 3px solid cyan;
    padding: 5px;
    border-radius: 10px;
}

.active a{
    color: cyan;
    font-weight: bold;

}
@media(max-width:750px){
    .show-header {
        color: white;
        text-decoration: none;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        position: fixed;
        top: 0;
        right: 0;
        background-color: rgb(55, 4, 55);
        opacity: 0.95;
        height: 100vh;
        width: 100%;
        border-bottom-left-radius: 50%;
        border-top-left-radius: 50%;
        border-left:5px solid rgba(255, 255, 255, 0.445);
        overflow: hidden;
        transition: width 0.5s;
      }
      .hide-header {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        overflow: hidden;
        position: fixed;
        color: white;
        text-decoration: none;
        top: 0;
        right: 0;
        height: 0;
        width: 0;
        transition: all 0s;
      }
      .menu-icon {
        color: aqua;
        font-size: 45px;
      }
}

